<resources>
    <string name="app_name" translatable="false">LabDroid</string>
    <string name="home">Home</string>
    <string name="documentation">Documentation</string>
    <string name="log">Log</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>