<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/webFragmentDocumentation"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/documentation"/>
        <item
            android:id="@+id/webFragmentLog"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/log"/>
        <item
            android:id="@+id/webFragmentPrivacyPolicy"
            android:icon="@drawable/ic_baseline_policy_24"
            android:title="@string/privacy_policy"/>
    </group>
</menu>